# torch-swiglu-compat

./: README.md  pyproject.toml
src/torch_swiglu_compat/: __init__.py  core.py
